# sentinel-arena

./: .gitignore  CITATION.cff  LICENSE  README.md  funding.json  pyproject.toml
sentinel_arena/: __init__.py  cli.py
sentinel_arena/attacks/: __init__.py  autodan.py  cot_hijack.py  custom.py  encoding.py  jailbreakbench.py  loader.py  multi_turn.py  role_play.py
sentinel_arena/report/: __init__.py  charts.py  generator.py
sentinel_arena/report/templates/: report.html
sentinel_arena/runner/: __init__.py  batch.py  engine.py  judge.py  targets.py
sentinel_arena/sdk/: __init__.py  actions.py  commitment.py  extractor.py  wrapper.py
